--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,18 @@ body {
 
 .lb {
 	margin-left: 1em;
+	font-weight: normal;
+}
+
+.well {
+	height: 62px;
+	padding: 10px;
+}
+
+.well a {
+	color: blue;
+	font-weight: bold;
+	font-size: 15px;
 }
 
 .block-img-attr {
@@ -103,18 +115,29 @@ body {
 	margin-top: 20px;
 }
 
-.btn-add {
+.buy {
+	background-color: #e60f1e;
+	color: white;
+}
+
+.add {
+	background-color: #029900;
+	color: white;
+}
+
+.btn-order {
 	height: 42px;
 	line-height: 42px;
-	background-color: #029900;
 	font-size: 15px; width: 195px;
 	margin-right: 14px;
 	padding: 0;
 }
 
-.btn-add:hover {
-	box-shadow: 5px 5px 2px #888888;
-	background-color: #029900;
+
+.btn-order:hover {
+	color: white;
+	box-shadow: 4px 4px 3px #888888;
+	transition: .3s;
 }
 
 .info {
