--- a/public/source/assets/dest/css/huong-style.css
+++ b/public/source/assets/dest/css/huong-style.css
@@ -18,3 +18,114 @@
 	color: #fff;
 	padding: 10px 35px
 }
+/*css dặt hàng*/
+.form-horizontal .control-label {
+    float: left;
+    width: 160px;
+    padding-top: 5px;
+    text-align: right;
+}
+label {
+    display: block;
+    margin-bottom: 5px;
+}
+label, input, button, select, textarea {
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 20px;
+}
+label, select, button, input[type="button"], input[type="reset"], input[type="submit"], input[type="radio"], input[type="checkbox"] {
+    cursor: pointer;
+}
+.checkoutsteptitle.down {
+    background-position: right 10px;
+}
+.checkoutsteptitle {
+    padding: 8px 10px;
+    background: #E7E7E7 url("") no-repeat right -21px;
+    margin: 5px 0 10px 0;
+    color: #495c58;
+    font-size: 16px;
+    border-bottom: 1px dashed #E7E7E7;
+    cursor: pointer;
+}
+input.input-text{
+    width: 60px !important;
+}
+.checkoutsteptitle a.modify {
+    float: right;
+    margin-right: 30px;
+    font-size: 13px;
+    line-height: 16px;
+}
+.checkoutsteptitle a.modify {
+    float: right;
+    margin-right: 30px;
+    font-size: 13px;
+    line-height: 16px;
+}
+.table-responsive{
+    margin-bottom: 0px;
+    padding-bottom: 30px;
+}
+.input-text{
+    height: 32px !important;
+    margin: 0 !important;
+}
+.form-search input, .form-inline input, .form-horizontal input, .form-search textarea, .form-inline textarea, .form-horizontal textarea, .form-search select, .form-inline select, .form-horizontal select, .form-search .help-inline, .form-inline .help-inline, .form-horizontal .help-inline, .form-search .uneditable-input, .form-inline .uneditable-input, .form-horizontal .uneditable-input, .form-search .input-prepend, .form-inline .input-prepend, .form-horizontal .input-prepend, .form-search .input-append, .form-inline .input-append, .form-horizontal .input-append {
+    display: inline-block;
+    margin-bottom: 0;
+    vertical-align: middle;
+}
+textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
+    -moz-transition: border linear 0.2s, box-shadow linear 0.2s;
+    -o-transition: border linear 0.2s, box-shadow linear 0.2s;
+    transition: border linear 0.2s, box-shadow linear 0.2s;
+}
+select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
+    display: inline-block;
+    height: 40px;
+    padding: 4px 6px;
+    margin-bottom: 10px;
+    font-size: 14px;
+    line-height: 20px;
+    color: #555555;
+    vertical-align: middle;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
+.footerlinks ul li a, .footerlinks ul li a:hover, .thumbnail .shortlinks a, .thumbnail .shortlinks a:hover, .flex-control-paging li a, .flex-control-paging li a:hover, ul.categorymenu > li > a, ul.categorymenu > li > a:hover, .dropdown-menu li > a, .dropdown-menu li > a:hover, ul.categorymenu > li > div > ul > li > a, ul.categorymenu > li > div > ul > li > a:hover, #topnav ul li a, #topnav ul li a:hover, .thumbnail a.productcart, .thumbnail a:hover.productcart, input, input:focus, select, select:focus, textarea, textarea:focus {
+    -moz-transition: all .2s ease;
+    -webkit-transition: all .2s ease;
+    -o-transition: all .2s ease;
+}
+@media (min-width: 1200px) {
+    input, textarea, .uneditable-input {
+        margin-left: 0;
+    }
+
+    input,
+    input, textarea, .uneditable-input {
+        margin-left: 0;
+    }
+
+    input, textarea, .uneditable-input {
+        width: 206px;
+    }
+
+    .input-text {
+        width: 20px;
+    }
+
+    .controls > input {
+        width: 70%;
+    }
+}
+
