--- a/public/css/style.css
+++ b/public/css/style.css
@@ -180,3 +180,15 @@ body {
 	white-space: normal;
 	text-overflow: ellipsis;
 }
+input[type="text"], input[type="email"],input[type="url"],textarea {
+	width:70%;
+	border:1px solid #e1e1e1;
+	height:37px;
+	padding:0 12px
+}
+.col-md-6 input[type="email"]{
+	width:100%;
+	border:1px solid #e1e1e1;
+	height:37px;
+	padding:0 12px
+}
