--- a/public/source/assets/dest/css/style.css
+++ b/public/source/assets/dest/css/style.css
@@ -1713,9 +1713,9 @@ padding-right:25px
 
 #searchsubmit {
 position:absolute;
-right:6px;
+right:13px;
 top:0;
-bottom:0;
+bottom:7px;
 border:none;
 background:none
 }
@@ -4698,7 +4698,8 @@ background:none;
 border:1px solid white;
 color:white;
 height:37px;
-padding:0 15px
+padding:0 15px;
+margin-right:115px
 }
 #footer.color-div button {border:1px solid gray;}
 
@@ -5080,7 +5081,7 @@ position: relative;}
 /*menu*/
 /*********************/
 
-.main-menu>ul.l-inline> li> a{padding: 10px 22px;
+.main-menu>ul.l-inline> li> a{padding: 10px 60px;
 
     -webkit-font-smoothing: antialiased;
     transition: all 0.17s ease-in-out;
@@ -5159,16 +5160,13 @@ font-size: 35px;}
 .beta-pricing span.beta-price-button{float:left;width:100%;background:white;text-align:center;border-top: 1px solid #e1e1e1;padding: 30px 0;background-color: #f6f6f6; float:left;border-left: 1px solid #e1e1e1;border-right: 1px solid #e1e1e1;border-bottom: 1px solid #e1e1e1;}
 .beta-pricing span.beta-price-button a{background: #406590;}
 
-.main-menu ul li.active> a{background:#3a5c83; color:white!important;}
-.sub-menu li.active, .children li.active{background:#3a5c83; color:white!important;}
-.sub-menu li a, .children li a{font-size:14px;}
+
+
 .sub-menu{width:240px;}
 #logo{padding-right: 7px;}
 .beta-highlight{background-color:#3a5c83;}
 .bg-color10{background-color:#58a7c6;}
-.parent-active>a{background:#3a5c83; color:white;}
-.sub-menu li.parent-active, .children li.parent-active{background:#3a5c83; }
-.sub-menu li.parent-active>a, .children li.parent-active>a{color:white!important;}
+
 .tp-bullets.simplebullets.navbar{top: 40%;
 width: 100%; left:0px!important; bottom:0px!important; margin-left:0px!important;
 }
